# snowflake-healthcare-agent

./: .dockerignore  .gitignore  Dockerfile  README.md  langchain_snowflake_streaming_bug.md  langgraph.json  pyproject.toml
notebooks/: test_agent.ipynb
patches/: README.md  apply_patches.sh  langchain_snowflake_auth_patched.py  langchain_snowflake_base_patched.py  langchain_snowflake_connection_base_patched.py  langchain_snowflake_rest_client_patched.py  langchain_snowflake_retrievers_patched.py  langchain_snowflake_streaming_patched.py  langchain_snowflake_tools_patched.py  langchain_snowflake_utils_patched.py  revert_patches.sh
patches/splunk-otel-python-contrib/: README.md  apply_patches.sh  attributes_patched.py  callback_handler_patched.py  config_patched.py  environment_variables_patched.py  instruments_patched.py  metrics_patched.py  revert_patches.sh  span_emitter_patched.py  types_patched.py
scripts/sql/: 01_setup_db.sql  02_checkpoint_schema.sql  03_load_data.sql  04_cortex_services.sql  05_compute_resources.sql  06_audio_task.sql  07_deploy_streamlit.sql  08_spcs_deploy.sql  09_semantic_model.sql
scripts/sql/semantic_models/: healthcare_semantic_model.yaml
src/: __init__.py  config.py  dependencies.py  exceptions.py  main.py  otel_setup.py
src/graphs/: __init__.py  react_parser.py  react_prompts.py  react_state.py  react_workflow.py  state.py  workflow.py
src/middleware/: __init__.py  healthcare_prompts.py  logging.py
src/models/: __init__.py  agent_types.py  base.py  requests.py  responses.py
src/routers/: __init__.py  agent_routes.py
src/services/: __init__.py  agent_service.py  analyst_service.py  checkpointer.py  cortex_analyst_client.py  cortex_tools.py  llm_service.py  react_agent_service.py  search_service.py  snowflake_checkpointer.py  snowflake_session.py
src/tools/: __init__.py  healthcare_tools.py
streamlit/: app.py  environment.yml  pyproject.toml
tests/: conftest.py
tests/integration/: test_agent_service.py  test_real_snowflake.py  test_workflow.py
tests/unit/: test_cortex_search.py  test_llm_service.py  test_models.py  test_nodes.py  test_react_parser.py  test_react_workflow_chatsnowflake.py  test_snowflake_checkpointer.py  test_state.py
